微信活动最新版

--- a/css/merry-christmas-new.css
+++ b/css/merry-christmas-new.css
@@ -8,3 +8,4 @@
 .content .cake02 .link01{ width: 20%; height: 60%; top: 10%; left: 9%; }
 .content .cake02 .link02{ width:41%; height: 46%; top: 6%; right: 4%; }
 .content .cake02 .link03{ width:48%; height: 32%; bottom: 2%; right: 4%; }
+.content .photo01 .lamp{ position: absolute; width: 60%; top: 0; right: 0; }
