--- a/css/valentines.css
+++ b/css/valentines.css
@@ -1,14 +1,17 @@
 .content{ background:url(../img/valentines/bg.jpg); }
 .content .top{ padding-top: 14px; }
-.content .top .single{ position: relative; margin-top: -14%; }
+.content .top .single{ position: relative; margin-top: -20%; }
 .content .single a{ position: absolute; display: block; border-radius: 50%; }
 .content .single .a_flower{ top: 6%; left: 0; width: 48%; height: 52%;}
 .content .single .a_wine{ top: 28%; right: 3%; width: 34%; height: 42%; }
 .content .single .a_cake{ top: 50%; left: 20%; width: 54%; height: 46%; }
 
-.content .package01{ margin-top: -12%; }
-.content .package02{ margin-top: -6%; }
-.content .package03{ margin-top: -6%; }
+.content .package > div{ position: relative; margin-top: -6%; }
+.content .package a{ position: absolute; display: block; width: 34%; height: 14%; }
+.content .package .package01{ margin-top: -12%; }
+.content .package01 a { top: 48%; left: 12%; }
+.content .package02 a { top: 59%; right: 13%; }
+.content .package03 a { top: 59%; left: 13%; }
 
 .content .rules{ padding: 6%; background-color: #f4e5dc; color: #666; text-align: justify; }
 .content dt{ width: 30%; margin-bottom: 10px; }
