--- a/css/lottery-free-single.css
+++ b/css/lottery-free-single.css
@@ -1,21 +1,22 @@
 html,body,.content { height: 100%; }
 
-.content .page { background: url(../img/lottery-free-single/body_bg.jpg) no-repeat; background-size: cover; background-position: center center; }
+.content .page { position: relative; background: url(../img/lottery-free-single/body_bg.jpg) no-repeat; background-size: cover; background-position: center center; }
 
-.content .page01 { position: relative; height: 100%; }
-.page01 .banner { position: absolute; left: 20%; width: 60%; }
+.content .page01 { height: 100%; }
+.page01 .banner { position: absolute; left: 22%; width: 56%; }
 .page01 .banner01 { top: 2%; }
 .page01 .btn-lottery{ bottom: 0; display: inline-block; }
+.page01 .logo { position: absolute; top: 4%; left: 72%; width: 22%;  }
 
-.content .page02 { position: relative; height: 100%; }
+.content .page02 { height: 100%;  background: url(../img/lottery-free-single/page02_bg.jpg) no-repeat; background-size: cover; background-position: center center; }
 .page02 .banner { position: relative; top: 6%; }
-.page02 .banner:after{ content: ''; display: block; position: absolute; bottom: -20px; left: 10%; width: 80%; height: 1px; border-bottom: 1px #000 solid; } 
 .page02 .page-regist { position: absolute; bottom:10%; left: 50%; width: 78%; padding: 36px 4% 0; transform: translateX(-50%); }
-.page02 .page-regist li { width: 100%; height: 50px; line-height: 50px; background-color: #fff; border-radius: 6px; margin-bottom: 10px; }
+.page02 .page-regist li { width: 100%; height: 50px; line-height: 50px; background-color: #fff; border: 1px solid #0a3e56; border-radius: 6px; margin-bottom: 10px; }
 .page02 .page-regist li input { width: 90%; height: 50px; padding-left: 5%; border: 0; border-radius: 6px 0 0 6px; font-size: 14px; line-height: 50px; }
 .page02 .page-regist li .txt-mobile { float: left; width: 55%; }
 .page02 .page-regist li .btn-vcode { display: inline-block; float: left; width: 40%; height: 50px; background-color: #297fa0; border-radius: 0 6px 6px 0;  font-size: 14px; line-height: 50px; text-align: center; color: #fff; }
 .page02 .page-regist .btn-regist { display: inline-block; float: left; width: 100%; height: 50px; background-color: #0a3e56; border-radius: 6px; margin-top: 10px; font-size: 16px; line-height: 50px; text-align: center; color: #fff;  }
+.page02 .logo { position: absolute; top: 2%; left: 72%; width: 20%;  }
 
 .page03 .banner { margin-top: 6%; }
 #lottery { position: relative; width:95%; margin:-3% auto 0; }
@@ -34,7 +35,7 @@ html,body,.content { height: 100%; }
 .page03 .rules dl { width: 90%; margin: 0 auto; color: #fff; }
 .page03 .rules dt { margin-bottom: 6px; font-size: 18px; line-height: 30px; text-align: center; }
 .page03 .rules dd { font-size: 14px; line-height: 22px; text-align: justify; }
-
+.page03 .logo { position: absolute; top: 1%; left: 72%; width: 20%;  }
 
 /* 抽奖弹窗 */
 #popup-tip,#popup-share { position: fixed; top: 0; left: 0; z-index: 999; display: none; width: 100%; height: 100%; background: rgba(0,0,0,0.8); }
