--- a/css/half-price.css
+++ b/css/half-price.css
@@ -1,7 +1,7 @@
 .content { background-color: #f6ebe7; }
 .content img { display: block; width: 100%; }
 .content .banner { width: 100%; padding: 40px 0 10px; }
-.content a{ display: block; width: 34%; margin: 0 auto 4px; }
+.content a{ display: block; width: 30%; margin: 4px auto 12px; -webkit-animation: 1.75s smooth infinite; animation: 1.75s smooth infinite; }
 .content .text { width: 55%; padding: 20px 0; margin: 0 auto; }
 .content .rules { width: 88%;padding: 26px 6%; background-color: #5e4f5e; text-align: center; color: #fff; }
 .content .rules dt{ margin-bottom: 4px; line-height: 30px; font-size: 18px; }
@@ -39,4 +39,15 @@
 }
 ::-moz-placeholder{
    color: #f1f0ef;
+}
+
+@-webkit-keyframes smooth {
+	0% { -webkit-transform: scale(1); }
+	50% { -webkit-transform: scale(1.2); }
+	100% { -webkit-transform: scale(1); }
+}
+@keyframes smooth {
+	0% { transform: scale(1); }
+	50% { transform: scale(1.2); }
+	100% { transform: scale(1); }
 }
