--- a/css/blueberry.css
+++ b/css/blueberry.css
@@ -2,6 +2,10 @@
 .content .cakeList { position: relative; margin: 34% auto 10px; }
 .content .cakeList a{ position: absolute; top: -37%; left: 8%; display: block; width: 32%; -webkit-transform-origin:80% bottom; -moz-transform-origin:80% bottom; -ms-transform-origin:80% bottom; -o-transform-origin:80% bottom; transform-origin:80% bottom; -webkit-animation: shake 3s infinite; -moz-animation: shake 3s infinite; -ms-animation: shake 3s infinite; -o-animation: shake 3s infinite; animation: shake 3s infinite; }
 .content .desc { padding: 16px 0 50px; }
+.content .rules { background-color: #e4555f; text-align: center; color: #fff; }
+.content dl { width: 90%; margin: 0 auto; padding: 20px 0; }
+.content .rules dt{ margin-bottom: 4px; line-height: 30px; font-size: 18px; text-align: center; }
+.content .rules dd{ line-height: 20px; }
 
 #frm-register.section { width: 100%; padding: 10px 0 40px; background-color: #425670; }
 #frm-register .sec-header { width: 100%; }
