--- a/css/qixi-festival.css
+++ b/css/qixi-festival.css
@@ -4,7 +4,9 @@
 .content .box { position: relative; margin-bottom: 10%; }
 .content .box a { position: absolute; top: 70%; left: 58%; display: block; width: 10%; }
 .content .box02 a { top: 77%; left: 66%; }
-.content .notice { width: 70%; margin: -4% auto 8%; }
+.content .box03 a { top: 82%; left: 67%; }
+.content .notice { width: 70%; margin: -4% auto 4%; }
+.content .qr-code { width: 30%; margin: 0 auto 8%; }
 .content dl { width: 80%; padding: 6% 10%; background-color: #505050; color: #fff; text-align: justify; }
 .content dt { margin-bottom: 14px; font-size: 16px; line-height: 20px; }
 .content dd { margin-bottom: 10px; font-size: 12px; line-height: 18px; }
