--- a/css/mid-autumn-88.css
+++ b/css/mid-autumn-88.css
@@ -5,6 +5,14 @@
 
 .content .rules { display: block; width: 78%;padding: 16px 0 30px; margin: 0 auto; }
 
+/* 注册结果 */
+#mask-result { display: none; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.5); position: fixed; top: 0; left: 0; z-index: 999; }
+#mask-result img { width: 100%; }
+#mask-result .result { width: 73.4375%; max-width: 500px; background: #fff; margin: auto; position: absolute; top: 50%; left: 0; right: 0; z-index: 9999; overflow: hidden; -webkit-transform: translateY(-50%); transform: translateY(-50%); }
+#mask-result .result .btn-result-close { display: block; position: absolute; top: 5%; right: 5%; width: 10.6%; }
+#mask-result .result .result-content { width: 100%; }
+#mask-result .result .result-content .result-info { display: none; width: 100%; }
+
 @-webkit-keyframes smooth {
 	0% { -webkit-transform: scale(1); }
 	50% { -webkit-transform: scale(1.2); }
