--- a/css/midautumn-seckill.css
+++ b/css/midautumn-seckill.css
@@ -1,5 +1,15 @@
 .content { background-color: #fcf9f2; padding-top: 50px; }
 .content .act-date { width: 100%; font-size: 14px; line-height: 36px; color: #334457; text-align: center; }
+
+.content .city-location { position: relative; width: 18%; margin: 10px auto; }
+.content .city-location .location-popup { display: none; position: absolute; right: -50%; top: 40px; width: 300%; padding: 10px 20px; background-color: #282828; border-radius: 5px; }
+.content .city-location .location-popup:after { width: 0; height: 0; content: ''; display: block; position: absolute; top: -12px; right: 47px; border-left: 6px solid transparent; border-right: 6px solid transparent; border-top: 6px solid transparent; border-bottom: 6px solid #282828; }
+.content .city-location .location-popup > p { font-size: 14px; color: #d2d2d2; line-height: 40px; }
+.content .city-location .location-popup > ul { width: 100%; }
+.content .city-location .location-popup > ul li { float: left; display: inline-block; width: 22%; line-height: 24px; text-align: center; font-size: 14px; color: #d2d2d2; margin-bottom: 5px; cursor: pointer; border: 1px solid transparent; }
+.content .city-location .location-popup > ul li.active,
+.content .city-location .location-popup > ul li:hover { border-color: #c81528; color: #c81528; border-radius: 5px; }
+
 .content .mooncakes { margin: 20px auto 30px; }
 .content .act-tip { font-size: 16px; line-height: 26px; text-align: center; color: #a72b34; margin-top: 20px; }
 .content .act-time { font-size: 36px; line-height: 36px; text-align: center; color: #334457; font-family:ds-digitalbold; }
@@ -10,6 +20,9 @@
 .content a.btn-buy { display: block; width: 80%; margin: 10px auto 0; }
 
 .content .seckill { width: 52%; margin: 6% auto; }
+
+.content .last-count { margin: 10px 0; font-size: 18px; line-height: 24px; text-align: center; color: #334457; }
+.content .last-count span { display: inline-block; padding: 5px 15px; text-align: center; margin: 0 15px; background: #293645; color: #fff; font-family: 'ds-digitalbold'; }
 
 .content .seckill-box { width: 76%; padding: 20px 0 40px; margin: 0 auto; }
 .content .seckill-box li { float: left; width: 48%; margin:0 4% 26px 0; }
