--- a/css/delicious-upgrade.css
+++ b/css/delicious-upgrade.css
@@ -16,13 +16,16 @@ body{ max-width: 640px; margin: 0 auto; }
 .content .write-method .tip { text-align: center; }
 
 .content .btn-begin { display: block; width: 55%; background-color: #c50202; border-radius: 25px; margin: 0 auto; font-size: 16px; line-height: 50px; font-weight: bold; text-align: center; color: #fff; }
-.content .qrCode { display: block; width: 28%; margin: 20px auto; }
 
-.content .cake-list { position: relative; width: 85%; margin: 0 auto 30px; }
-.content .cake-list a { position: absolute; bottom: 1%; left: 3%; display: block; width: 40%; height: 7%; }
-.content .cake-list a.btn-buy02 { left: 54%; }
-.content .cake-list a.btn-buy03 { left: 5%; }
-.content .cake-list a.btn-buy04 { left: 55%; }
+.content .cakes { width: 86%; margin: 36px auto 0; }
+.content .cakes li { position: relative; float: left; width: 49%; margin: 0 2% 20px 0;}
+.content .cakes li:nth-of-type(2n) { margin-right: 0; }
+.content .cakes li .cake-hide,
+.content .cakes li .price-hide { display: none; }
+.content .cakes li p { font-size: 12px; line-height: 24px; text-align: center; color: #e66625; }
+.content .cakes li p.cur { color: gray; }
+.content .cakes li p .count { font-size: 14px; line-height: 24px; }
+.content .cakes li a { position: absolute; bottom: 1%; left: 10%; display: block; width: 80%; height: 6%;/* background-color: red; opacity: .5; */}
 
 .content dl { width: 88%; padding: 6%; background-color: #60433f; color: #fff; }
 .content dt { margin-bottom: 12px; font-size: 16px; line-height: 16px; text-align: justify; }
