--- a/css/delicious-upgrade.css
+++ b/css/delicious-upgrade.css
@@ -5,6 +5,16 @@ body{ max-width: 640px; margin: 0 auto; }
 .content .disc .discTitle { font-size: 32px; line-height: 40px; font-weight: bold; }
 .content .disc .discTitle2 { margin-bottom: 20px; font-size: 16px; line-height: 16px; }
 .content .disc .discTxt { font-size: 12px; line-height: 20px; }
+
+.content .disc .address { width: 80%; margin: 0 auto; }
+.content .disc .address p,
+.content .disc .address li { font-size: 14px; line-height: 30px; color: #965b49; text-align: center;  }
+.content .disc .address .addr-cur { margin: 20px auto 0; }
+.content .disc .address .addr-cur i { display: inline-block; width: 5%; vertical-align: sub; }
+.content .disc .address li { float: left; width: 30%; margin-right: 4%; border: 1px solid #965b49; border-radius: 15px; }
+.content .disc .address li.cur { background-color: #965b49; color: #fff; }
+.content .disc .address li:nth-of-type(3n) { margin-right: 0; }
+
 .content .disc .tip2 { font-size: 26px; line-height: 36px; margin-top: 20px; }
 .content .disc .info { font-size: 22px; line-height: 34px; color: #965b49;}
 .content .disc .info span { font-weight: bold; }
