--- a/css/queen-cheese-all.css
+++ b/css/queen-cheese-all.css
@@ -29,6 +29,10 @@
 #mask-result .result .result-content .result-ok a { position: absolute; bottom: 9%; left: 32%; display: block; width: 36%; background-color: #0e2f8f; border-radius: 6px; font-size: 16px; line-height: 40px; text-align: center; color: #fff;  }
 #mask-result .result .result-content .result-fail p { margin: 16% 0; font-size: 16px; line-height: 40px; text-align: center; }
 
+#mask-share { position: absolute; top: -100%; left: 0; width: 100%; height: 100%; background: url(../img/queen-cheese-all/mask_bg.png); }
+#mask-share .share { position: relative; width: 100%; height: 100%; }
+#mask-share .share img { width: 100%; }
+
 @-webkit-keyframes arrow { 
 	0% { bottom: 2%; }
 	50% { bottom: 4%; } 
