--- a/css/rotary-draw.css
+++ b/css/rotary-draw.css
@@ -21,10 +21,10 @@ body { max-width: 640px; margin: 0 auto; }
 .content .location-popup > ul li:nth-of-type(4n) { margin-right: 0; }
 
 .content .rotary { position: relative; margin-top: 14px; animation: change 1s linear infinite; -webkit-animation: change 1s linear infinite; }
-.content .rotary .rotary-bg {  }
-.content .rotary .gift-item { position: absolute; top: 0; left: 0; }
-.content .rotary .btn-start { position: absolute; top: 36%; left: 36%; width: 28%; }
-.content .rotary .gift-arrow { position: absolute; top: 0; left: 46.5%; width: 6.4%; }
+.content .rotary .abs { position: absolute; top: 0; left: 0; }
+.content .rotary .btn-start { top: 36%; left: 36%; width: 28%; }
+.content .rotary .gift-arrow { top: 0; left: 46.5%; width: 6.4%; }
+.content .rotary .gift-list img { display: none; }
 
 .content .chance { margin: 30px 0; font-size: 18px; color: #363b47; line-height: 36px; text-align: center; }
 .content .chance span { font-size: 32px; line-height: 32px; color: #f4834c; font-weight: bold; vertical-align: top; }
