--- a/css/rotary-draw.css
+++ b/css/rotary-draw.css
@@ -1,6 +1,7 @@
-body { max-width: 640px; margin: 0 auto; }
+body { max-width: 640px; margin: 0 auto; overflow-x: hidden; }
 
 .content { background-color: #fbf8ee; }
+.content img { width: 100%; vertical-align: top; }
 .content .banner { position: relative; }
 .content .banner .icon-flower { position: absolute; bottom: -24%; left: 0; display: block; width: 14.6%; }
 
@@ -20,14 +21,18 @@ body { max-width: 640px; margin: 0 auto; }
 .content .location-popup > ul li.active { background-color: #fff; color: #000; }
 .content .location-popup > ul li:nth-of-type(4n) { margin-right: 0; }
 
-.content .rotary { position: relative; margin-top: 14px; animation: change 1s linear infinite; -webkit-animation: change 1s linear infinite; }
+.content .rotary { position: relative; width: 100%; height: 100%; margin-top: 14px; overflow: hidden; animation: change 1s linear infinite; -webkit-animation: change 1s linear infinite; }
 .content .rotary .abs { position: absolute; top: 0; left: 0; }
 .content .rotary .btn-start { top: 36%; left: 36%; width: 28%; }
 .content .rotary .gift-arrow { top: 0; left: 46.5%; width: 6.4%; }
 .content .rotary .gift-list img { display: none; }
+.content .rotary .btn-goOn { top: 77%; left: 40%; display: none; width: 20%; height: 26px; background-color: #754d3e; border-radius: 14px; font-size: 12px; line-height: 26px; color: #fff; text-align: center; z-index: 9999;}
+.content .rotary .btn-timeout { background-color: #999999; }
 
-.content .chance { margin: 30px 0; font-size: 18px; color: #363b47; line-height: 36px; text-align: center; }
-.content .chance span { font-size: 32px; line-height: 32px; color: #f4834c; font-weight: bold; vertical-align: top; }
+.content .chance { margin: 30px 0; font-size: 16px; color: #363b47; line-height: 36px; text-align: center; }
+.content .chance #number { font-size: 28px; line-height: 30px; color: #f4834c; font-weight: bold; vertical-align: top; }
+.content .chance #count-down i { font-style: normal; }
+.content .chance #btn-timeout { color: #f4834c; text-decoration: underline; }
 
 .content .btnBox { position: relative; width: 54%; margin: 0 auto 34px; }
 .content .btnBox .icon-flower2 { position: absolute; top: 16%; left: -30%; display: block; width: 22%; }
@@ -40,12 +45,46 @@ body { max-width: 640px; margin: 0 auto; }
 .content .rules .rule-title { margin-top: 16px; }
 .content .rules dd{ line-height: 20px; text-align: justify; }
 
+/* 注册结果 */
+#mask-result { position: fixed; top: 0; left: 0; display: none; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.5); z-index: 9999; }
+#mask-result .result { position: absolute; top: 50%; left: 0; right: 0; width: 72%; max-width: 460px; background: #fff; margin: auto; border-radius: 6px; z-index: 9999; overflow: hidden; -webkit-transform: translateY(-50%); transform: translateY(-50%); }
+.result img { width: 100%; }
+
+.result .result-content .result-info { display: none; width: 84%; margin: 16px auto 26px; }
+.result-content .result-info .tip-title { display: block; width: 30%; margin: 0 auto; }
+.result-content .result-info .tip-text { margin: 10px 0; font-size: 12px; line-height: 16px; text-align: justify; }
+.result-content .result-info .tip-text span { color: #d00000; }
+.result-content .result-info .btn-ok,
+.result-content .result-info .btn-go,
+.result-content .result-login #btn-register { display: block; width: 100%; background-color: #0e2f8f; border-radius: 6px; font-size: 14px; line-height: 32px; text-align: center; color: #fff;  }
+
+.result-content .result-frequency .tip-text { width: 80%; margin: 16px auto; text-align: center; }
+.result-content .result-lose .tip-text { margin: 20px 0 30px; text-align: center; }
+.result-content .result-getGift .tip-text { margin: 20px 0; } 
+.result-content .result-getGift .tip-text:first-of-type { margin-top: 26px; }
+
+/* 登录||注册 */
+.result-content .result-login,
+.result-content .result-frequency { position: relative; }
+.result-content .result-login .btn-result-close,
+.result-content .result-frequency .btn-result-close { display: block; position: absolute; top: -5%; right: -5%; width: 10%; }
+.result-content .result-login .register-title { margin: 20px 0; font-size: 16px; line-height: 16px; text-align: center; }
+.result-content .result-login li { margin-bottom: 10px; position: relative; }
+.result-login li input { display: block; height: 34px; line-height: 34px; text-indent: 2.6em; -webkit-appearance: none; border: 1px solid #ddd; border-radius: 5px; outline: none; font-size: 12px; }
+.result-login li .txt-mobile { width: 99%; }
+.result-login li .txt-vcode { float: left; width: 60%; border-radius: 5px 0 0 5px; }
+.result-login li #btn-vcode { float: left; width: 40%; height: 34px; line-height: 34px; margin-left: -4px; text-align: center; border: 1px solid #ddd; border-radius: 0 5px 5px 0; color: #fff; background-color: #8bade5; }
+.result-login li .icon-mobile,
+.result-login li .icon-vcode { position: absolute; width: 9%; height: 100%; margin-left: 3%; background: url('../img/rotary-draw/icon_mobile.png') no-repeat; background-size: contain; background-position: left center;  }
+.result-login li .icon-vcode { background: url('../img/rotary-draw/icon_vcode.png') no-repeat; background-size: contain; background-position: left center; }
+.result-login .tips { margin: -4px auto 10px; font-size: 12px; line-height: 12px; color: #d13c4f; }
+
 @keyframes change {
-	from { background: url(../img/rotary-draw/turntable_bg1.png) no-repeat; background-size: cover; }
-	to { background: url(../img/rotary-draw/turntable_bg2.png) no-repeat; background-size: cover; }
+	from { background: url(../img/rotary-draw/turntable_bg1.png) no-repeat; background-size: contain; }
+	to { background: url(../img/rotary-draw/turntable_bg2.png) no-repeat; background-size: contain; }
 }
 @-webkit-keyframes change {
-	from { background: url(../img/rotary-draw/turntable_bg1.png) no-repeat; background-size: cover; }
-	to { background: url(../img/rotary-draw/turntable_bg2.png) no-repeat; background-size: cover; }
+	from { background: url(../img/rotary-draw/turntable_bg1.png) no-repeat; background-size: contain; }
+	to { background: url(../img/rotary-draw/turntable_bg2.png) no-repeat; background-size: contain; }
 }
 
