--- a/css/rotary-draw.css
+++ b/css/rotary-draw.css
@@ -21,7 +21,7 @@ body { max-width: 640px; margin: 0 auto; overflow-x: hidden; }
 .content .location-popup > ul li.active { background-color: #fff; color: #000; }
 .content .location-popup > ul li:nth-of-type(4n) { margin-right: 0; }
 
-.content .rotary { position: relative; width: 100%; height: 100%; margin-top: 14px; overflow: hidden; animation: change 1s linear infinite; -webkit-animation: change 1s linear infinite; }
+.content .rotary { position: relative; width: 100%; height: 100%; background: url(../img/rotary-draw/turntable_bg1.png) no-repeat center; background-size: contain; margin-top: 14px; overflow: hidden; animation: change 1s linear infinite; -webkit-animation: change 1s linear infinite; }
 .content .rotary .abs { position: absolute; top: 0; left: 0; }
 .content .rotary .btn-start { top: 36%; left: 36%; width: 28%; }
 .content .rotary .gift-arrow { top: 0; left: 46.5%; width: 6.4%; }
@@ -80,11 +80,11 @@ body { max-width: 640px; margin: 0 auto; overflow-x: hidden; }
 .result-login .tips { margin: -4px auto 10px; font-size: 12px; line-height: 12px; color: #d13c4f; }
 
 @keyframes change {
-	from { background: url(../img/rotary-draw/turntable_bg1.png) no-repeat; background-size: contain; }
-	to { background: url(../img/rotary-draw/turntable_bg2.png) no-repeat; background-size: contain; }
+	from { background: url(../img/rotary-draw/turntable_bg1.png) no-repeat center; background-size: contain; }
+	to { background: url(../img/rotary-draw/turntable_bg2.png) no-repeat center; background-size: contain; }
 }
 @-webkit-keyframes change {
-	from { background: url(../img/rotary-draw/turntable_bg1.png) no-repeat; background-size: contain; }
-	to { background: url(../img/rotary-draw/turntable_bg2.png) no-repeat; background-size: contain; }
+	from { background: url(../img/rotary-draw/turntable_bg1.png) no-repeat center; background-size: contain; }
+	to { background: url(../img/rotary-draw/turntable_bg2.png) no-repeat center; background-size: contain; }
 }
 
