--- a/css/anniversary.css
+++ b/css/anniversary.css
@@ -1,8 +1,10 @@
 body { max-width: 640px; margin: 0 auto; }
 .content .banner { position: relative; }
-.content .banner a { position: absolute; top: 6px; right: 24px; width: 15%; text-align: center; }
-.content .banner .return { width: 20px; height: 20px; }
+.content .banner .return { position: absolute; top: 6px; right: 24px; width: 15%; text-align: center; }
+.content .banner a img { width: 20px; height: 20px; }
 .content .banner a span { display: block; line-height: 18px; color: #0055a2; }
+.content .banner .btn-website { position: absolute; bottom: 0; left: 3%; width: 44%; }
+.content .banner .btn-website img { width: 100%; height: 100%; }
 
 .content .exchange { position: relative; width: 84%; padding: 0 8% 40px; background-color: #4e4c54; }
 .content .exchange:after{ position: absolute; bottom: 0; left: 5%; width: 90%; content: ''; border-bottom: 1px solid #fff; }
