--- a/css/register-welfare16.css
+++ b/css/register-welfare16.css
@@ -1,9 +1,9 @@
 body { max-width: 640px; margin: 0 auto; }
 .content { background: #fff url(../img/register-welfare16/bg.png); }
 .content .cakes { position: relative; }
-.content .cakes a { position: absolute; bottom: 3%; left: 27%; display: block; width: 45%; height: 30px; }
+.content .cakes a { position: absolute; bottom: 3%; left: 27%; display: block; width: 45%; height: 6%; }
 .content .cake02 a { bottom: 2.4%; left: 28%; }
-.content .cake03 a { bottom: 6%; left: 26%; }
+.content .cake03 a { bottom: 7%; left: 26%; }
 
 .content .rules { width: 90%;padding: 26px 5% 50px; background-color: #fd5147; text-align: justify; color: #fff; }
 .content .rules dt { margin-bottom: 4px; line-height: 30px; font-size: 18px; }
@@ -14,9 +14,9 @@ body { max-width: 640px; margin: 0 auto; }
 #mask-result { position: fixed; top: 0; left: 0; display: none; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.7); z-index: 9999; }
 #mask-result img { width: 100%; }
 #mask-result .mask-bg,
-#mask-result .result { position: absolute; top: 50%; left: 0; right: 0; width: 90%; margin: auto; z-index: 9999; overflow: hidden; -webkit-transform: translateY(-50%); transform: translateY(-50%); }
-#mask-result .result { top: 30%; left: 3%;}
-#mask-result .result .btn-result-close { display: block; position: absolute; top: 2%; right: 10%; width: 10%; z-index: 999; }
+#mask-result .result { position: absolute; top: 50%; left: 0; right: 0; width: 90%; margin: auto; z-index: 9999; overflow: hidden; -webkit-transform: translateY(-30%); transform: translateY(-30%); }
+#mask-result .result { top: 54%; }
+#mask-result .btn-result-close { display: block; position: absolute; top: 37%; right: 10%; width: 10%; z-index: 99999; }
 
 #mask-result .result-info { width: 84%; margin: 28% auto 0; }
 #mask-result .result-info a { display: block; width: 100%; background-color: #0e2f8f; border-radius: 6px; font-size: 16px; line-height: 40px; text-align: center; color: #fff; }
@@ -25,7 +25,7 @@ body { max-width: 640px; margin: 0 auto; }
 #mask-result .result-login li { margin-bottom: 10px; }
 #mask-result .result-login li input { display: block; height: 36px; line-height: 36px; text-indent: 1em; -webkit-appearance: none; border: 1px solid #ddd; border-radius: 5px; outline: none; font-size: 12px; }
 #mask-result .result-login li .txt-vcode { float: left; width: 56%; border-radius: 5px 0 0 5px; }
-#mask-result .result-login li .btn-vcode { float: left; width: 44%; height: 36px; line-height: 36px; margin-left: -4px; text-align: center; border: 1px solid #99807f; border-radius: 0 5px 5px 0; color: #fff; background-color: #99807f; }
+#mask-result .result-login li .btn-vcode { float: left; width: 44%; height: 36px; line-height: 36px; margin-left: -4px; text-align: center; border: 1px solid #983023; border-radius: 0 5px 5px 0; color: #fff; background-color: #983023; }
 #mask-result .result-login li a { font-size: 12px; }
 #mask-result .result-login li .txt-mobile { width: 100%; }
 #mask-result .result-login .tips { width: 80%; margin: -4px auto 0; font-size: 12px; line-height: 12px; text-align: center; color: #fffc00; }
