--- a/css/register-welfare16.css
+++ b/css/register-welfare16.css
@@ -29,4 +29,10 @@ body { max-width: 640px; margin: 0 auto; }
 #mask-result .result-login li a { font-size: 12px; }
 #mask-result .result-login li .txt-mobile { width: 100%; }
 #mask-result .result-login .tips { width: 80%; margin: -4px auto 0; font-size: 12px; line-height: 12px; text-align: center; color: #fffc00; }
-#mask-result .result-login #btn-register { display: block; width: 80%; height: 36px; margin: 8% auto 0; font-size: 16px; line-height: 36px; text-align: center; border-radius: 5px; background-color: #3b476c; color: #fff; }
+#mask-result .result-login #btn-register,
+#mask-result .result-login .btn-other a { display: block; height: 36px; font-size: 16px; line-height: 36px; text-align: center; border-radius: 5px; background-color: #3b476c; color: #fff; }
+#mask-result .result-login #btn-register,
+#mask-result .result-login .btn-other { width: 80%; margin: 8% auto 0; }
+#mask-result .result-login .btn-other { display: none; }
+#mask-result .result-login #btn-goOn { float: left; width: 40%; background-color: #6c779b; }
+#mask-result .result-login #btn-receive { float: right; width: 58%; }
