--- a/css/register-welfare16.css
+++ b/css/register-welfare16.css
@@ -10,6 +10,10 @@ body { max-width: 640px; margin: 0 auto; }
 .content .rules dd { line-height: 20px; }
 .content .rules dd.rule-tip { color: #ffd900; }
 
+/* 快注提示 */
+#mask-tip { position: fixed; bottom: 2%; right: -30%; display: block; width: 30%; z-index: 9999; -webkit-animation: 3s ani-smooth infinite; -webkit-transform-origin: right bottom; animation: 3s ani-smooth infinite; transform-origin: right bottom; }
+#mask-tip img { width: 100%; }
+
 /* 弹窗提示 */
 #mask-result { position: fixed; top: 0; left: 0; display: none; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.7); z-index: 9999; }
 #mask-result img { width: 100%; }
@@ -36,3 +40,14 @@ body { max-width: 640px; margin: 0 auto; }
 #mask-result .result-login .btn-other { display: none; }
 #mask-result .result-login #btn-goOn { float: left; width: 40%; background-color: #6c779b; }
 #mask-result .result-login #btn-receive { float: right; width: 58%; }
+
+@-webkit-keyframes myfirst{
+	0%   { -webkit-transform: scale(1); }
+	50%  { -webkit-transform: scale(0.8); }
+	100% { -webkit-transform: scale(1); }
+}
+@keyframes ani-smooth{
+	0%   { transform: scale(1); }
+	50%  { transform: scale(0.8); }
+	100% { transform: scale(1); }
+}
