--- a/css/618.css
+++ b/css/618.css
@@ -73,3 +73,86 @@
 .rules dl dd:last-child{
 	padding-bottom: 20px;
 }
+
+.sahde-login{
+	position: fixed;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(0,0,0,0.7);
+}
+.sahde-login .login{
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	margin-left: -40%;
+	margin-top: -125px;
+	width: 80%;
+	height: 250px;
+	background-color: #fff;
+	border-radius:10px ;
+}
+.sahde-login .login p:nth-of-type(1){
+	text-align: center;
+	font-size: 24px;
+	color: #E0424B;
+	padding-top: 10px;
+}
+.sahde-login .login ul{
+	list-style: none;
+	margin-left: 8%;
+}
+.sahde-login .login ul li{
+	position: relative;
+	width: 90%;
+	height: 30px;
+	margin:30px 0 ;
+}
+.sahde-login .login ul li:nth-of-type(1) input{
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 60%;
+	height: 30px;
+	border: 0;
+	border-bottom: 1px solid #E0424B;
+}
+.sahde-login .login ul li:nth-of-type(1) a{
+	position: absolute;
+	right: 0;
+	top: 0;
+	width: 40%;
+	height: 30px;
+	text-align: center;
+	line-height: 30px;
+	background-color: #E0424B;
+	color: #fff;
+	border-radius: 10px;
+}
+.sahde-login .login ul li:nth-of-type(2) input{
+	width: 100%;
+	height: 30px;
+	border: 0;
+	border-bottom: 1px solid #E0424B;
+}
+.sahde-login .login ul li:nth-of-type(3) a{
+	display: block;
+	width: 100%;
+	height: 30px;
+	text-align: center;
+	line-height: 30px;
+	background: #E0424B;
+	color: #fff;
+	border-radius: 10px;
+}
+.sahde-login .login span{
+	position: absolute;
+	right: 10px;
+	top: 10px;
+	display: block;
+	width: 20px;
+	height: 20px;
+	background: url("../img/618/close.png") no-repeat;
+	background-size: 20px 20px;
+}
